added header buttons

--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
             <nav>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#" class="nav-link"></a>
+                        <a href="#" class="nav-link">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"></a>
+                        <a href="#" class="nav-link">Furniture</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"></a>
+                        <a href="#" class="nav-link">Partnerships</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"></a>
+                        <a href="#" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </nav>
+
+            <div class="header-btns">
+                <button class="sign-in_btn"></button>
+                <button class="cart-btn"></button>
+            </div>
         </div>
     </header>
 </body>
