added display flex to the header elements

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             </nav>
 
             <div class="header-btns">
-                <button class="sign-in_btn"></button>
-                <button class="cart-btn"></button>
+                <button class="sign-in_btn">Sign Up</button>
+                <button class="cart-btn">
+                    <img src="images/cart-icon.png" alt="">
+                </button>
             </div>
         </div>
     </header>
