--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header__wrapper">
             <div class="dekoor-icon">
-                <img src="images/dekoor-logo.png" alt="">
+                <img src="images/dekoor-logo.png" alt="logo">
                 <p class="dekoor-icon-text">Dekoor</p>
             </div>
             <nav>
@@ -37,7 +37,7 @@
             <div class="header-btns">
                 <button class="sign-in_btn">Sign Up</button>
                 <button class="cart-btn">
-                    <img src="images/cart-icon.png" alt="">
+                    <img src="images/cart-icon.png" alt="cart icon">
                 </button>
             </div>
         </div>
