--- a/index.html
+++ b/index.html
@@ -42,5 +42,25 @@
             </div>
         </div>
     </header>
+    <section class="welcome-section">
+        <div class="welcome-section__wrapper">
+            <div class="welcome-section__main">
+                <h1 class="welcome-heading">The kind of <br> <spam style="color: rgba(129, 114, 83, 1);">furniture</spam>  you have <br> been looking for</h1>
+                <div class="search-btns">
+                    <button class="search-catalog_btn">
+                        <img src="images/search.svg" alt="">
+                        SEARCH CATALOG
+                    </button>
+                    <button class="watch-video_btn">
+                        <img src="images/play.svg" alt="">
+                        WATCH VIDEOS
+                    </button>
+                </div>
+            </div>
+            <div class="welcome-section__product">
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
