--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="welcome-section__product">
-                
+                <img src="images/sofa.png" alt="">
             </div>
         </div>
     </section>
