main-section finished

--- a/index.html
+++ b/index.html
@@ -48,17 +48,22 @@
                 <h1 class="welcome-heading">The kind of <br> <spam style="color: rgba(129, 114, 83, 1);">furniture</spam>  you have <br> been looking for</h1>
                 <div class="search-btns">
                     <button class="search-catalog_btn">
-                        <img src="images/search.svg" alt="">
+                        <img src="images/search.svg" alt="search icon">
                         SEARCH CATALOG
                     </button>
                     <button class="watch-video_btn">
-                        <img src="images/play.svg" alt="">
+                        <img src="images/play.svg" alt="play icon">
                         WATCH VIDEOS
                     </button>
                 </div>
             </div>
             <div class="welcome-section__product">
-                <img src="images/sofa.png" alt="">
+                
+                <p class="sofa-price">$329</p>
+                <p class="sofa-name">Pösht Sofa</p>
+                <button class="view-details-btn">VIEW DETAILS
+                    <img src="images/arrow_right.svg" alt="arrow-right">
+                </button>
             </div>
         </div>
     </section>
