--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="src/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dekoor</title>
 </head>
+
 <body>
     <header>
         <div class="header__wrapper">
@@ -42,30 +46,35 @@
             </div>
         </div>
     </header>
-    <section class="welcome-section">
-        <div class="welcome-section__wrapper">
-            <div class="welcome-section__main">
-                <h1 class="welcome-heading">The kind of <br> <spam style="color: rgba(129, 114, 83, 1);">furniture</spam>  you have <br> been looking for</h1>
-                <div class="search-btns">
-                    <button class="search-catalog_btn">
-                        <img src="images/search.svg" alt="search icon">
-                        SEARCH CATALOG
-                    </button>
-                    <button class="watch-video_btn">
-                        <img src="images/play.svg" alt="play icon">
-                        WATCH VIDEOS
+
+    <main>
+        <section class="welcome-section">
+            <div class="welcome-section__wrapper">
+                <div class="welcome-section__main">
+                    <h1 class="welcome-heading">The kind of <br>
+                        <span style="color: rgba(129, 114, 83, 1);">furniture</span> you have <br> been looking for
+                    </h1>
+                    <div class="search-btns">
+                        <button class="search-catalog_btn">
+                            <img src="images/search.svg" alt="search icon">
+                            search catalog
+                        </button>
+                        <button class="watch-video_btn">
+                            <img src="images/play.svg" alt="play icon">
+                            watch videos
+                        </button>
+                    </div>
+                </div>
+                <div class="welcome-section__product">
+                    <p class="sofa-price">$329</p>
+                    <p class="sofa-name">Pösht Sofa</p>
+                    <button class="view-details-btn">view details
+                        <img src="images/arrow_right.svg" alt="arrow-right">
                     </button>
                 </div>
             </div>
-            <div class="welcome-section__product">
-                
-                <p class="sofa-price">$329</p>
-                <p class="sofa-name">Pösht Sofa</p>
-                <button class="view-details-btn">VIEW DETAILS
-                    <img src="images/arrow_right.svg" alt="arrow-right">
-                </button>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
+
 </html>
