--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 </div>
             </div>
         </section>
+        <section class="why-choose">
+            
+        </section>
     </main>
 </body>
 
