--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </div>
         </section>
         <section class="why-choose">
-            
+            <div class="why-choose_wrapper">
+                <h2 class="why-choose_heading">WHY CHOOSE US?</h2>
+            </div>
         </section>
     </main>
 </body>
