--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </section>
         <section class="why-choose">
             <div class="why-choose_wrapper">
-                <h2 class="why-choose_heading">WHY CHOOSE US?</h2>
+                <h2 class="why-choose_heading">Why choose us?</h2>
+                <p class="why-choose-text">We care about details and the quality of our products</p>
             </div>
         </section>
     </main>
