--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             <div class="why-choose_wrapper">
                 <h2 class="why-choose_heading">Why choose us?</h2>
                 <p class="why-choose-text">We care about details and the quality of our products</p>
+                <div class="our-achievements_wrapper">
+                    <div class="first-achievement">
+                        <img src="" alt="">
+                        <p></p>
+                    </div>
+                    <div class="second-achievement">
+                        <img src="" alt="">
+                        <p></p>
+                    </div>
+                    <div class="third-achievement">
+                        <img src="" alt="">
+                        <p></p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
