--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
                 <p class="why-choose-text">We care about details and the quality of our products</p>
                 <div class="our-achievements_wrapper">
                     <div class="first-achievement">
-                        <img src="" alt="">
-                        <p></p>
+                        <img class="white-magnifier-icon" src="images/white_magnifier.svg" alt="magnifier-icon">
+                        <p class="achievement-text">MANUFACTURED WITH <br> QUALITY MATERIALS</p>
                     </div>
                     <div class="second-achievement">
-                        <img src="" alt="">
-                        <p></p>
+                        <p class="five-icon">5</p>
+                        <p class="achievement-text">5 YEARS OF WARRANTY <br> FOR EACH PROFUCT</p>
                     </div>
                     <div class="third-achievement">
-                        <img src="" alt="">
-                        <p></p>
+                        <img class="bag-icon" src="images/bag-icon.svg" alt="bag-icon">
+                        <p class="achievement-text">20 YEARS OF EXPERTISE</p>
                     </div>
                 </div>
             </div>
