why-choose section finished

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
         <section class="why-choose">
             <div class="why-choose_wrapper">
                 <h2 class="why-choose_heading">Why choose us?</h2>
-                <p class="why-choose-text">We care about details and the quality of our products</p>
+                <p class="why-choose-text">We care about details and the quality <br> of our products</p>
                 <div class="our-achievements_wrapper">
-                    <div class="first-achievement">
+                    <div class="achievement">
                         <img class="white-magnifier-icon" src="images/white_magnifier.svg" alt="magnifier-icon">
-                        <p class="achievement-text">MANUFACTURED WITH <br> QUALITY MATERIALS</p>
+                        <p class="achievement-text">manufactured with <br> quality materials</p>
                     </div>
-                    <div class="second-achievement">
+                    <div class="achievement">
                         <p class="five-icon">5</p>
-                        <p class="achievement-text">5 YEARS OF WARRANTY <br> FOR EACH PROFUCT</p>
+                        <p class="achievement-text">5 years of warranty <br> for each product</p>
                     </div>
-                    <div class="third-achievement">
+                    <div class="achievement">
                         <img class="bag-icon" src="images/bag-icon.svg" alt="bag-icon">
-                        <p class="achievement-text">20 YEARS OF EXPERTISE</p>
+                        <p class="achievement-text">20 years of expertise</p>
                     </div>
                 </div>
             </div>
