our-partners section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 </div>
             </div>
         </section>
+        <section class="our-partners">
+            <div class="our-partners_wrapper">
+                
+            </div>
+        </section>
     </main>
 </body>
 
