--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
         </section>
         <section class="our-partners">
             <div class="our-partners_wrapper">
-                
+                <div class="number-of-partners_wrapper">
+                <p class="number-of-partners">25+</p>
+                <p class="partnered-brands">partnered brands</p>
+                </div>
+                <div class="brands">
+                    <img src="images/gusto.png" alt="gusto logo">
+                    <img src="images/stripe.png" alt="stripe logo">
+                    <img src="images/treehouse.png" alt="treehouse logo">
+                    <img src="images/upwork.png" alt="upwork logo">
+                </div>
             </div>
         </section>
     </main>
