categories section started

--- a/index.html
+++ b/index.html
@@ -108,6 +108,37 @@
                 </div>
             </div>
         </section>
+        <section class="categories">
+            <div class="categories__wrapper">
+                <div class="categories_images">
+                    <img src="images/room-with-white-sofa.png" alt="room-with-white-sofa">
+                    <img src="images/room-with-orange-sofa.png" alt="room-with-orange-sofa">
+                    <img src="images/room-with-guitar.png" alt="room-with-guitar">
+                </div>
+                <div class="categories_list">
+                    <h2 class="categories_heading">Categories</h2>
+                    <p class="categories_subtitle">Furniture Sets <br> Recommendations</p>
+                    <div class="main-categories-list">
+                        <div class="categories_item_wrapper">
+                            <p class="category-name">Bedroom</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                        </div>
+                        <div class="categories_item_wrapper">
+                            <p class="category-name">Living Room</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                        </div>
+                        <div class="categories_item_wrapper">
+                            <p class="category-name">Home Office</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                        </div>
+                        <div class="categories_item_wrapper">
+                            <p class="category-name">Gaming Room</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
