--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <section class="our-partners">
             <div class="our-partners_wrapper">
                 <div class="number-of-partners_wrapper">
-                <p class="number-of-partners">25+</p>
-                <p class="partnered-brands">partnered brands</p>
+                    <p class="number-of-partners">25+</p>
+                    <p class="partnered-brands">partnered brands</p>
                 </div>
                 <div class="brands">
                     <img src="images/gusto.png" alt="gusto logo">
@@ -121,20 +121,47 @@
                     <div class="main-categories-list">
                         <div class="categories_item_wrapper">
                             <p class="category-name">Bedroom</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                                created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Living Room</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                                created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Home Office</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                                created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Gaming Room</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br>  Designs created for increased comfortability</p>
+                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                                created for increased comfortability</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our-products">
+            <div class="our-products_wrapper">
+                <div class="our-products-heading_wrapper">
+                    <h2 class="our-products_heading">OUR PRODUCTS</h2>
+                    <p class="best-seller-text">This month’s best seller</p>
+                    <button class="our-products_btn">SEE MORE</button>
+                </div>
+                <div class="best-sellers">
+                    <img src="images/white-chair.png" alt="white-chair">
+                    <div class="orange-sofa"></div>
+                    <img src="images/wooden-table.png" alt="wooden-table">
+                    <img src="images/room.png" alt="room">
+                </div>
+                <div class="carousel-arrows">
+                    <div class="back-arrow">
+                        <img src="images/arrow_back_ios.svg" alt="arrow_back">
+                    </div>
+                    <div class="forward-arrow">
+                        <img src="images/arrow_forward_ios.svg" alt="arrow_forward">
                     </div>
                 </div>
             </div>
