our-products section finshed

--- a/index.html
+++ b/index.html
@@ -146,21 +146,26 @@
         <section class="our-products">
             <div class="our-products_wrapper">
                 <div class="our-products-heading_wrapper">
-                    <h2 class="our-products_heading">OUR PRODUCTS</h2>
-                    <p class="best-seller-text">This month’s best seller</p>
+                    <div class="our-products-text_wrapper">
+                        <h2 class="our-products_heading">OUR PRODUCTS</h2>
+                        <p class="best-seller-text">This month’s best seller</p>
+                    </div>
                     <button class="our-products_btn">SEE MORE</button>
                 </div>
                 <div class="best-sellers">
-                    <img src="images/white-chair.png" alt="white-chair">
-                    <div class="orange-sofa"></div>
-                    <img src="images/wooden-table.png" alt="wooden-table">
-                    <img src="images/room.png" alt="room">
+                        <img src="images/white-chair.png" alt="white-chair">
+                        <div class="orange-sofa">
+                            <p class="orange-sofa-price">$329</p>
+                            <p class="orange-sofa-name">Sofa Und</p>
+                        </div>
+                        <img src="images/wooden-table.png" alt="wooden-table">
+                        <img src="images/room.png" alt="room">
                 </div>
                 <div class="carousel-arrows">
-                    <div class="back-arrow">
+                    <div class="carousel-arrow">
                         <img src="images/arrow_back_ios.svg" alt="arrow_back">
                     </div>
-                    <div class="forward-arrow">
+                    <div class="carousel-arrow">
                         <img src="images/arrow_forward_ios.svg" alt="arrow_forward">
                     </div>
                 </div>
