started limited-deals section

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
                     <button class="our-products_btn">SEE MORE</button>
                 </div>
                 <div class="best-sellers">
-                        <img src="images/white-chair.png" alt="white-chair">
-                        <div class="orange-sofa">
-                            <p class="orange-sofa-price">$329</p>
-                            <p class="orange-sofa-name">Sofa Und</p>
-                        </div>
-                        <img src="images/wooden-table.png" alt="wooden-table">
-                        <img src="images/room.png" alt="room">
+                    <img src="images/white-chair.png" alt="white-chair">
+                    <div class="orange-sofa">
+                        <p class="orange-sofa-price">$329</p>
+                        <p class="orange-sofa-name">Sofa Und</p>
+                    </div>
+                    <img src="images/wooden-table.png" alt="wooden-table">
+                    <img src="images/room.png" alt="room">
                 </div>
                 <div class="carousel-arrows">
                     <div class="carousel-arrow">
@@ -168,6 +168,16 @@
                     <div class="carousel-arrow">
                         <img src="images/arrow_forward_ios.svg" alt="arrow_forward">
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="limited-deals">
+            <h2 class="limited-deals_heading">LIMITED DEALS</h2>
+            <p class="limited-deals_subtitle">Become a member and get 10% off of <br> your first purchase</p>
+            <div class="email-input">
+                <input type="email" placeholder="Enter your email here">
+                <div class="email-wrapper">
+                    <img src="images/mail.svg" alt="email icon">
                 </div>
             </div>
         </section>
