limited-deals section finished

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
         <section class="limited-deals">
             <h2 class="limited-deals_heading">LIMITED DEALS</h2>
             <p class="limited-deals_subtitle">Become a member and get 10% off of <br> your first purchase</p>
-            <div class="email-input">
-                <input type="email" placeholder="Enter your email here">
-                <div class="email-wrapper">
+            <div class="email-input_wrapper">
+                <input class="email-input" type="email" placeholder="Enter your email here">
+                <button class="email-wrapper">
                     <img src="images/mail.svg" alt="email icon">
-                </div>
+                </button>
             </div>
         </section>
     </main>
