--- a/index.html
+++ b/index.html
@@ -181,6 +181,71 @@
                 </button>
             </div>
         </section>
+        <footer>
+            <div class="footer__wrapper">
+                <div class="company_info">
+                    <div class="footer-dekoor-icon">
+                        <img src="images/dekoor-logo.png" alt="logo">
+                        <p class="footer-dekoor-icon-text">Dekoor</p>
+                    </div>
+                    <p class="about-company">Dekoor is a furniture company created to fulfill the needs of family <br> with aesthetic feeling in their furniture. Always pay attention to <br> details and give clear communication for the customers. Priority of <br> our design is comfortability.</p>
+                    <p class="copyright">©Copyright 2022 Dekoor</p>
+                </div>
+                <div class="contact-us">
+                    <div class="support-us">
+                        <ul class="footer-list">
+                            <h2>Support</h2>
+                            <li class="footer-item">
+                                <a class="footer-link" href="#">FAQ</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Shipping & Returns</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Care guide</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Redeem warranty</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="social-media">
+                        <ul class="footer-list">
+                            <h2>Social Media</h2>
+                            <li class="footer-item">
+                                <a class="footer-link" class="footer-link" href="#">Instagram</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Facebook</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Twitter</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">TikTok</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="about-us">
+                        <ul class="footer-list">
+                            <h2>About Us</h2>
+                            <li class="footer-item">
+                                <a class="footer-link" href="#">Our story</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Designer</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Craftmanship</a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#">Sustainability</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
