--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <ul class="footer-list">
                             <h2>Social Media</h2>
                             <li class="footer-item">
-                                <a class="footer-link" class="footer-link" href="#">Instagram</a>
+                                <a class="footer-link" href="#">Instagram</a>
                             </li>
                             <li>
                                 <a class="footer-link" href="#">Facebook</a>
