adapted the header

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <button class="cart-btn">
                     <img src="images/cart-icon.png" alt="cart icon">
                 </button>
+                <div class="burger">
+                    <img class="burger-icon" src="images/burger-icon.png" alt="burger">
+                </div>
             </div>
         </div>
     </header>
