--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <section class="welcome-section">
             <div class="welcome-section__wrapper">
                 <div class="welcome-section__main">
-                    <h1 class="welcome-heading">The kind of <br>
-                        <span style="color: rgba(129, 114, 83, 1);">furniture</span> you have <br> been looking for
+                    <h1 class="welcome-heading">The kind of
+                        <span style="color: rgba(129, 114, 83, 1);">furniture</span> you have been looking for
                     </h1>
                     <div class="search-btns">
                         <button class="search-catalog_btn">
-                            <img src="images/search.svg" alt="search icon">
+                            <img class="search-icon" src="images/search.svg" alt="search icon">
                             search catalog
                         </button>
                         <button class="watch-video_btn">
-                            <img src="images/play.svg" alt="play icon">
+                            <img class="play-icon" src="images/play.svg" alt="play icon">
                             watch videos
                         </button>
                     </div>
@@ -80,15 +80,15 @@
         <section class="why-choose">
             <div class="why-choose_wrapper">
                 <h2 class="why-choose_heading">Why choose us?</h2>
-                <p class="why-choose-text">We care about details and the quality <br> of our products</p>
+                <p class="why-choose-text">We care about details and the quality of our products</p>
                 <div class="our-achievements_wrapper">
                     <div class="achievement">
                         <img class="white-magnifier-icon" src="images/white_magnifier.svg" alt="magnifier-icon">
-                        <p class="achievement-text">manufactured with <br> quality materials</p>
+                        <p class="achievement-text">manufactured with quality materials</p>
                     </div>
                     <div class="achievement">
                         <p class="five-icon">5</p>
-                        <p class="achievement-text">5 years of warranty <br> for each product</p>
+                        <p class="achievement-text">5 years of warranty for each product</p>
                     </div>
                     <div class="achievement">
                         <img class="bag-icon" src="images/bag-icon.svg" alt="bag-icon">
@@ -104,10 +104,10 @@
                     <p class="partnered-brands">partnered brands</p>
                 </div>
                 <div class="brands">
-                    <img src="images/gusto.png" alt="gusto logo">
-                    <img src="images/stripe.png" alt="stripe logo">
-                    <img src="images/treehouse.png" alt="treehouse logo">
-                    <img src="images/upwork.png" alt="upwork logo">
+                    <img class="gusto-logo" src="images/gusto.png" alt="gusto">
+                    <img class="stripe-logo" src="images/stripe.png" alt="stripe">
+                    <img class="treehouse-logo" src="images/treehouse.png" alt="treehouse">
+                    <img class="upwork-logo" src="images/upwork.png" alt="upwork">
                 </div>
             </div>
         </section>
@@ -120,26 +120,26 @@
                 </div>
                 <div class="categories_list">
                     <h2 class="categories_heading">Categories</h2>
-                    <p class="categories_subtitle">Furniture Sets <br> Recommendations</p>
+                    <p class="categories_subtitle">Furniture Sets Recommendations</p>
                     <div class="main-categories-list">
                         <div class="categories_item_wrapper">
                             <p class="category-name">Bedroom</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                            <p class="category-title">Enjoy a great living room aesthetics with your family Designs
                                 created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Living Room</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                            <p class="category-title">Enjoy a great living room aesthetics with your family Designs
                                 created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Home Office</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                            <p class="category-title">Enjoy a great living room aesthetics with your family Designs
                                 created for increased comfortability</p>
                         </div>
                         <div class="categories_item_wrapper">
                             <p class="category-name">Gaming Room</p>
-                            <p class="category-title">Enjoy a great living room aesthetics with your family <br> Designs
+                            <p class="category-title">Enjoy a great living room aesthetics with your family Designs
                                 created for increased comfortability</p>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
         </section>
         <section class="limited-deals">
             <h2 class="limited-deals_heading">LIMITED DEALS</h2>
-            <p class="limited-deals_subtitle">Become a member and get 10% off of <br> your first purchase</p>
+            <p class="limited-deals_subtitle">Become a member and get 10% off of your first purchase</p>
             <div class="email-input_wrapper">
                 <input class="email-input" type="email" placeholder="Enter your email here">
                 <button class="email-wrapper">
@@ -191,7 +191,9 @@
                         <img src="images/dekoor-logo.png" alt="logo">
                         <p class="footer-dekoor-icon-text">Dekoor</p>
                     </div>
-                    <p class="about-company">Dekoor is a furniture company created to fulfill the needs of family <br> with aesthetic feeling in their furniture. Always pay attention to <br> details and give clear communication for the customers. Priority of <br> our design is comfortability.</p>
+                    <p class="about-company">Dekoor is a furniture company created to fulfill the needs of family with
+                        aesthetic feeling in their furniture. Always pay attention to details and give clear
+                        communication for the customers. Priority of our design is comfortability.</p>
                     <p class="copyright">©Copyright 2022 Dekoor</p>
                 </div>
                 <div class="contact-us">
