adapted our-products section

--- a/index.html
+++ b/index.html
@@ -156,19 +156,28 @@
                     <button class="our-products_btn">SEE MORE</button>
                 </div>
                 <div class="best-sellers">
-                    <img src="images/white-chair.png" alt="white-chair">
-                    <div class="orange-sofa">
-                        <p class="orange-sofa-price">$329</p>
-                        <p class="orange-sofa-name">Sofa Und</p>
+                    <div class="white-chair-image">
+                        <p class="product-price">$149</p>
+                        <p class="product-name">Chair Und</p>
                     </div>
-                    <img src="images/wooden-table.png" alt="wooden-table">
-                    <img src="images/room.png" alt="room">
+                    <div class="orange-sofa-image">
+                        <p class="product-price">$329</p>
+                        <p class="product-name">Sofa Und</p>
+                    </div>
+                    <div class="wooden-table-image">
+                        <p class="product-price">$219</p>
+                        <p class="product-name">Table Und</p>
+                    </div>
+                    <div class="room-image">
+                        <p class="product-price">$129</p>
+                        <p class="product-name">Shelf Und</p>
+                    </div>
                 </div>
                 <div class="carousel-arrows">
-                    <div class="carousel-arrow">
+                    <div class="carousel-arrow carousel-arrow-back">
                         <img src="images/arrow_back_ios.svg" alt="arrow_back">
                     </div>
-                    <div class="carousel-arrow">
+                    <div class="carousel-arrow carousel-arrow-forward">
                         <img src="images/arrow_forward_ios.svg" alt="arrow_forward">
                     </div>
                 </div>
