adapted limited-deals section

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             <p class="limited-deals_subtitle">Become a member and get 10% off of your first purchase</p>
             <div class="email-input_wrapper">
                 <input class="email-input" type="email" placeholder="Enter your email here">
-                <button class="email-wrapper">
-                    <img src="images/mail.svg" alt="email icon">
+                <button class="email-button-wrapper">
+                    <img class="email-icon" src="images/mail.svg" alt="email icon">
                 </button>
             </div>
         </section>
